# pico-gaggia-thermostat

./: CMakeLists.txt  Dockerfile  main.c  mcp9600.c  mcp9600.h  pico_sdk_import.cmake  register_map.c  register_map.h  thermostat.c  thermostat.h
